# bookmarks

./: pyproject.toml
bookmarks/: pyproject.toml
bookmarks/account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_form.html
bookmarks/bookmarks/: cert.crt  cert.key  db.sqlite3  settings.py  urls.py
bookmarks/bookmarks/account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/bookmarks/account/migrations/: 0001_initial.py
bookmarks/bookmarks/account/templates/: base.html
bookmarks/bookmarks/account/templates/account/: dashboard.html  login.html
bookmarks/bookmarks/account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_email.html  password_reset_form.html
bookmarks/bookmarks/bookmarks/: asgi.py  settings.py  urls.py  wsgi.py
bookmarks/bookmarks/images/: admin.py  forms.py  models.py  urls.py  views.py
bookmarks/bookmarks/images/migrations/: 0001_initial.py
bookmarks/bookmarks/images/templates/: book-marklet_launcher.js
bookmarks/images/: forms.py  models.py  urls.py  views.py
bookmarks/images/migrations/: 0001_initial.py
bookmarks/images/templates/: book-marklet_launcher.js
