[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pillow = "^10.4.0"
python-social-auth = "^0.3.6"
social-auth-app-django = "^5.4.2"
django-extensions = "^3.2.3"
werkzeug = "^3.0.3"
pyopenssl = "^24.2.1"
requests = "^2.32.3"
easy-thumbnails = "^2.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
